--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -20,7 +20,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env create --file environment.yml
+        conda env create --file  yogatastic/.github/workflows/python-package-conda.yml
         conda activate myenv
     - name: Lint with flake8
       run: |
