--- a/Yogatastic/requirements.txt
+++ b/Yogatastic/requirements.txt
@@ -1,11 +1,63 @@
-Flask==2.2.3
+appdirs==1.4.4
+attrs==22.2.0
+beautifulsoup4==4.11.2
+cadquery==2.2.0
+cadquery-ocp==7.7.0
+casadi==3.5.5
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
 click==8.1.3
 colorama==0.4.6
-importlib-metadata==6.1.0
+contourpy==1.0.7
+cryptography==39.0.1
+cycler==0.11.0
+exceptiongroup==1.1.0
+ezdxf==1.0.3
+Flask==2.2.2
+fonttools==4.39.0
+frozendict==2.3.5
+googlefinance==0.7
+html5lib==1.1
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.12.0
+iniconfig==2.0.0
+install==1.3.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.4
+lxml==4.9.2
 MarkupSafe==2.1.2
-pip==20.2.3
-setuptools==49.2.1
-Werkzeug==2.2.3
-zipp==3.15.0
+matplotlib==3.7.1
+multimethod==1.9.1
+multitasking==0.0.11
+mysql-connector-python==8.0.32
+nlopt==2.7.1
+nptyping==2.0.1
+numpy==1.24.2
+packaging==23.0
+pandas==1.5.3
+path==16.6.0
+Pillow==9.4.0
+pluggy==1.0.0
+protobuf==3.20.3
+pycparser==2.21
+pyglet==1.5.27
+pyparsing==3.0.9
+PySocks==1.7.1
+pytest==7.2.1
+python-dateutil==2.8.2
+pytz==2022.7.1
+requests==2.28.2
+six==1.16.0
+soupsieve==2.4
+tomli==2.0.1
+trimesh==3.21.2
+typing_extensions==4.5.0
+typish==1.9.3
+urllib3==1.26.14
+webencodings==0.5.1
+Werkzeug==2.2.2
+yfinance==0.2.12
+zipp==3.13.0
